--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
