--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
@@ -27,6 +28,8 @@
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "puppeteer": "^22.7.1",
+    "razorpay": "^2.9.3",
     "sharp": "^0.33.2",
     "uuid": "^9.0.1"
   },
