--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
@@ -31,6 +32,7 @@
     "puppeteer": "^22.7.1",
     "razorpay": "^2.9.3",
     "sharp": "^0.33.2",
+    "sweetalert2": "^11.10.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
