--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.4",
+    "easyinvoice": "^3.0.47",
     "ejs": "^3.1.9",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
@@ -22,6 +23,8 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
